--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <script src="https://kit.fontawesome.com/a8267045c4.js" crossorigin="anonymous"></script>
     <script src="./app/js/main.js" type="module" defer></script>
 </head>
 <body>
